Changes : Before deploy

--- a/app/globals.css
+++ b/app/globals.css
@@ -54,6 +54,7 @@
 
     --radius: 0.5rem;
   }
+
   .dark {
     --background: 0 0% 3.9%;
 
@@ -109,6 +110,7 @@
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
   }
@@ -118,6 +120,7 @@
   .gradient {
     @apply bg-gradient-to-br from-blue-500 to-green-500;
   }
+
   .gradient-title {
     @apply gradient font-extrabold tracking-tighter pr-2 pb-2 text-transparent bg-clip-text;
   }
@@ -125,9 +128,11 @@
 
 .dotted-background {
   background-color: #16223c;
-  background-image: radial-gradient(
-    rgba(255, 255, 255, 0.28) 1px,
-    transparent 1px
-  );
+  background-image: radial-gradient(rgba(255, 255, 255, 0.28) 1px,
+      transparent 1px);
   background-size: 30px 30px;
+}
+
+.cl-internal-1dauvpw,.cl-internal-1hp5nqm {
+  display: none;
 }
